<resources>
    <string name="app_name">TestSuitMedia</string>
    <string name="background_icon">background icon</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="third_screen">Third Screen</string>
    <string name="retry">Retry</string>
</resources>