<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.screens.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_gravity="center"
            android:contentDescription="@string/background_icon"
            android:src="@drawable/ic_photo" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="58dp"
            android:autofillHints="@string/name"
            android:background="@drawable/rounded"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingVertical="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"
            android:textColorHint="#C9C8CE"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/name"
            android:background="@drawable/rounded"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/palindrome"
            android:inputType="text"
            android:paddingVertical="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"
            android:textColorHint="#C9C8CE"
            android:textSize="16sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="45dp"
            app:cornerRadius="16dp"
            android:backgroundTint="#2B637B"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/check"
            android:textColor="#fff"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:cornerRadius="16dp"
            android:backgroundTint="#2B637B"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next"
            android:textColor="#fff"
            android:textSize="14sp" />
    </LinearLayout>


</ScrollView>